
 - upsclient C library:
   * added support for `NUT_QUIET_INIT_SSL` environment variable to hide
     the infamous "Init SSL without certificate database" warning [#1662]

 - The `upsd.conf` listing of `LISTEN` addresses was previously inverted
   (the last listed address was applied first), which was counter-intuitive
   and fixed for this release [#2012]

 - sstate (server state, e.g. upsd) should now "PING" drivers also if they
   last reported themselves as "stale" (and might later crash) so their
   connections would be terminated if really no longer active [#1626]

 - Clarified documentation in codebase according to end-user feedback [#1721,
   #1750 and others over time]

 - Several fixes for `upsmon` behavior [#1761, #1680...], including new
   ability to configure default POWERDOWNFLAG location -- packagers are
   encouraged to pick optimal location for their distributions (which
   remains mounted at least read-only late in shutdown) and a new optional
   POLLFAIL_LOG_THROTTLE_MAX setting [#529, #506]

 - Extended Linux systemd support with optional notifications about daemon
   state (READY, RELOADING, STOPPING) and watchdog keep-alive messages [#1590]

 - Extended Linux systemd units with aliases named after the daemons:
   `nut-server.service` as `upsd.service`, and `nut-monitor.service` as
   `upsmon.service` (so simple `systemctl reload upsd` can work) [#1777]

 - Extended driver-server socket protocol with `BROADCAST (num)` keyword,
   and a `NOBROADCAST` as a shortcut for `BROADCAST 0`. This allows clients
   to toggle whether they want to receive `send_to_all()` updates from a
   driver, or only answers to requests they send [#1914]

 - Added support for `make sockdebug` for easier developer access to the tool;
   also if `configure --with-dev` is in effect, it would now be installed to
   the configured `libexec` location. A man page was also added. [#1936]

 - Numerous daemons (`upsd`, `upsmon`, drivers, `upsdrvctl`, `upssched`)